--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "fastapi_tutorial"}]
 python = "^3.10"
 fastapi = "^0.100.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
+sqlalchemy = "^2.0.20"
+alembic = "^1.11.3"
 
 
 [build-system]
